# Gen-Ai

gen-ai/: Teaching.txt  lab1.ipynb  lab10.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb  lab5.ipynb  lab6.ipynb  lab7.ipynb  lab8.ipynb  lab9.ipynb  pyproject.toml  requirements.txt
