[project]
name = "gen-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cohere>=5.20.7",
    "gensim>=4.4.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain==0.1.16",
    "langchain-community>=0.0.32",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "transformers==4.40.2",
    "wikipedia-api>=0.10.2",
]
